--- a/BUILD.gn
+++ b/BUILD.gn
@@ -508,15 +508,6 @@ config("angle_backend_config") {
   }
 }
 
-# Special porition of the code that requires no Objective-C ARC.
-angle_source_set("angle_metal_no_arc_backend") {
-  sources = libangle_metal_no_arc_sources
-
-  cflags = [ "-fno-objc-arc" ]
-  cflags_objc = [ "-fno-objc-arc" ]
-  cflags_objcc = [ "-fno-objc-arc" ]
-}
-
 angle_source_set("angle_metal_backend") {
   sources = libangle_metal_sources
 
@@ -528,12 +519,11 @@ angle_source_set("angle_metal_backend") {
   libs = []
 
   public_deps = [
-    ":angle_common"
+    ":angle_common",
   ]
 
   deps = [
     ":includes",
-    ":angle_metal_no_arc_backend",
     "${angle_glslang_dir}:glslang_default_resource_limits_sources",
     "${angle_glslang_dir}:glslang_sources",
     "${angle_spirv_cross_dir}:spirv_cross_sources",
@@ -541,15 +531,15 @@ angle_source_set("angle_metal_backend") {
 
   # Due to autoreleasepool unpredictable problems, we disable ARC for now.
   cflags_objc += [
-    "-fno-objc-arc", "-Wno-nullability-completeness"
+    "-fno-objc-arc",
+    "-Wno-nullability-completeness",
   ]
   cflags_objcc += [
-    "-fno-objc-arc", "-Wno-nullability-completeness"
+    "-fno-objc-arc",
+    "-Wno-nullability-completeness",
   ]
 
-  libs += [
-    "Metal.framework",
-  ]
+  libs += [ "Metal.framework" ]
 
   if (is_mac) {
     additional_cflags = [
@@ -769,9 +759,7 @@ angle_source_set("libANGLE") {
   }
 
   if (angle_enable_metal) {
-    public_deps += [
-      ":angle_metal_backend"
-    ]
+    public_deps += [ ":angle_metal_backend" ]
   }
 
   if (angle_enable_null) {
