Disable strip_absolute_paths_from_debug_symbols by default
Change-Id: If57867402e971a31fbf2054ac9bb9f898131a6f1

--- a/.gn
+++ b/.gn
@@ -37,4 +37,5 @@ default_args = {
   clang_use_chrome_plugins = true
   build_angle_deqp_tests = true
   use_sysroot = true
+  strip_absolute_paths_from_debug_symbols = false
 }
