--- a/src/libGLESv2.gni
+++ b/src/libGLESv2.gni
@@ -25,6 +25,7 @@ libangle_common_sources = [
   "src/common/android_util.h",
   "src/common/angleutils.cpp",
   "src/common/angleutils.h",
+  "src/common/apple_platform_utils.h",
   "src/common/bitset_utils.h",
   "src/common/debug.cpp",
   "src/common/debug.h",
