Refactor GlslangWrapper code (pt 1)
Change-Id: I6259ea7afbaa02ee112d6a40c66f109d35cc085a

--- a/src/libANGLE/renderer/vulkan/BUILD.gn
+++ b/src/libANGLE/renderer/vulkan/BUILD.gn
@@ -37,8 +37,8 @@ _vulkan_backend_sources = [
   "FenceNVVk.h",
   "FramebufferVk.cpp",
   "FramebufferVk.h",
-  "GlslangWrapper.cpp",
-  "GlslangWrapper.h",
+  "GlslangWrapperVk.cpp",
+  "GlslangWrapperVk.h",
   "ImageVk.cpp",
   "ImageVk.h",
   "MemoryObjectVk.cpp",
