Refactor GlslangWrapper code (pt 3)
Change-Id: Ic885c28d971d429b1375bceb2b0d6eaeeadb6f60

--- a/src/libANGLE/renderer/metal/BUILD.gn
+++ b/src/libANGLE/renderer/metal/BUILD.gn
@@ -19,8 +19,8 @@ _metal_backend_sources = [
   "DisplayMtl.mm",
   "FrameBufferMtl.h",
   "FrameBufferMtl.mm",
-  "GlslangWrapper.h",
-  "GlslangWrapper.mm",
+  "GlslangWrapperMtl.h",
+  "GlslangWrapperMtl.mm",
   "ProgramMtl.h",
   "ProgramMtl.mm",
   "RenderBufferMtl.h",
