rename StateCacheMtl and UtilsMtl to mtl_state_cache and mtl_render_utils
Change-Id: Iaa74e02547ce51d8bf718452acfe52307bb41fd8

--- a/src/libANGLE/renderer/metal/BUILD.gn
+++ b/src/libANGLE/renderer/metal/BUILD.gn
@@ -31,14 +31,10 @@ _metal_backend_sources = [
   "RendererMtl.mm",
   "ShaderMtl.h",
   "ShaderMtl.mm",
-  "StateCacheMtl.h",
-  "StateCacheMtl.mm",
   "SurfaceMtl.h",
   "SurfaceMtl.mm",
   "TextureMtl.h",
   "TextureMtl.mm",
-  "UtilsMtl.h",
-  "UtilsMtl.mm",
   "VertexArrayMtl.h",
   "VertexArrayMtl.mm",
   "mtl_buffer_pool.h",
@@ -50,8 +46,12 @@ _metal_backend_sources = [
   "mtl_format_table_autogen.mm",
   "mtl_format_utils.h",
   "mtl_format_utils.mm",
+  "mtl_render_utils.h",
+  "mtl_render_utils.mm",
   "mtl_resources.h",
   "mtl_resources.mm",
+  "mtl_state_cache.h",
+  "mtl_state_cache.mm",
   "mtl_utils.h",
   "mtl_utils.mm",
 ]
