Renamed GlslangWrapperMtl to mtl_glslang_utils
Change-Id: I9bc2b6a3510460dd73f80a0824968c896fb860d8

--- a/src/libANGLE/renderer/metal/BUILD.gn
+++ b/src/libANGLE/renderer/metal/BUILD.gn
@@ -19,8 +19,6 @@ _metal_backend_sources = [
   "DisplayMtl.mm",
   "FrameBufferMtl.h",
   "FrameBufferMtl.mm",
-  "GlslangWrapperMtl.h",
-  "GlslangWrapperMtl.mm",
   "ProgramMtl.h",
   "ProgramMtl.mm",
   "RenderBufferMtl.h",
@@ -46,6 +44,8 @@ _metal_backend_sources = [
   "mtl_format_table_autogen.mm",
   "mtl_format_utils.h",
   "mtl_format_utils.mm",
+  "mtl_glslang_utils.h",
+  "mtl_glslang_utils.mm",
   "mtl_render_utils.h",
   "mtl_render_utils.mm",
   "mtl_resources.h",
