--- a/src/libANGLE/renderer/vulkan/BUILD.gn
+++ b/src/libANGLE/renderer/vulkan/BUILD.gn
@@ -260,6 +260,7 @@ angle_source_set("angle_vulkan_backend") {
     "$angle_spirv_tools_dir:spvtools_val",
   ]
   public_deps = [
+    "$angle_root:angle_glslang_wrapper",
     "$angle_root:libANGLE_headers",
     "$angle_root/third_party/vulkan-headers/src:vulkan_headers",
   ]
