Use FeaturesMtl to store metal hardware's limitations
Change-Id: I747d5b3b36486d5490dedf406b9b983f340314ea

--- a/src/libGLESv2.gni
+++ b/src/libGLESv2.gni
@@ -159,6 +159,7 @@ libangle_includes = [
   "include/platform/Feature.h",
   "include/platform/FeaturesD3D.h",
   "include/platform/FeaturesGL.h",
+  "include/platform/FeaturesMtl.h",
   "include/platform/FeaturesVk.h",
   "include/platform/FrontendFeatures.h",
   "include/platform/Platform.h",
