Use embedded BUILD.gn from spirv-cross repo itself
Change-Id: Ic66691daf7e9934901cdfeffd5c810f3ecb77f6a

--- a/src/libANGLE/renderer/metal/BUILD.gn
+++ b/src/libANGLE/renderer/metal/BUILD.gn
@@ -79,7 +79,7 @@ angle_source_set("angle_metal_backend") {
   ]
 
   deps = [
-    "${angle_spirv_cross_dir}:spirv_cross_sources",
+    "${angle_root}/third_party/spirv-cross/spirv-cross/gn:spirv_cross_sources",
   ]
 
   objc_flags = [
