--- a/.gn
+++ b/.gn
@@ -33,6 +33,7 @@ exec_script_whitelist = angle_dotfile_settings.exec_script_whitelist +
                         ]
 
 default_args = {
+  mac_sdk_min = "10.13"
   use_custom_libcxx = false
   clang_use_chrome_plugins = true
   build_angle_deqp_tests = true
