--- a/.travis.yml
+++ b/.travis.yml
@@ -21,11 +21,11 @@ jobs:
     osx_image: xcode11.2
   - name: "macos xcode 9.4"
     python: "3.5"
-    env: CMD="ninja -C out/release hello_triangle"
+    env: CMD="ninja -j 2 -C out/release hello_triangle"
     osx_image: xcode9.4
   - name: "macos xcode 11.2"
     python: "3.5"
-    env: CMD="ninja -C out/release hello_triangle"
+    env: CMD="ninja -j 2 -C out/release hello_triangle"
     osx_image: xcode11.2
 
 script:
