WIP: 3D texture and array texture supports
Change-Id: I03460b83fcdc2550ad2b2090fcb5aef0de17ddde

--- a/src/libANGLE/renderer/metal/BUILD.gn
+++ b/src/libANGLE/renderer/metal/BUILD.gn
@@ -57,6 +57,7 @@ _metal_backend_sources = [
   "mtl_state_cache.mm",
   "mtl_utils.h",
   "mtl_utils.mm",
+  "shaders/constants.h",
   "shaders/mtl_default_shaders_src_autogen.inc",
   "shaders/compiled/mtl_default_shaders.inc",
 ]
