Implemented sync object
Change-Id: I14125623dbe2daf1a95cc6847a2bf2b601532a6d

--- a/src/libANGLE/renderer/metal/BUILD.gn
+++ b/src/libANGLE/renderer/metal/BUILD.gn
@@ -30,6 +30,8 @@ _metal_backend_sources = [
   "RenderTargetMtl.mm",
   "ShaderMtl.h",
   "ShaderMtl.mm",
+  "SyncMtl.h",
+  "SyncMtl.mm",
   "SurfaceMtl.h",
   "SurfaceMtl.mm",
   "TextureMtl.h",
