WIP: Implement sampler object
Change-Id: Ib532820e76ab6a964687d7ed50e81cb84837dbc2

--- a/src/libANGLE/renderer/metal/BUILD.gn
+++ b/src/libANGLE/renderer/metal/BUILD.gn
@@ -28,6 +28,8 @@ _metal_backend_sources = [
   "RenderBufferMtl.mm",
   "RenderTargetMtl.h",
   "RenderTargetMtl.mm",
+  "SamplerMtl.h",
+  "SamplerMtl.mm",
   "ShaderMtl.h",
   "ShaderMtl.mm",
   "SyncMtl.h",
