--- a/src/compiler.gni
+++ b/src/compiler.gni
@@ -215,6 +215,8 @@ angle_translator_sources = [
   "src/compiler/translator/tree_util/NodeSearch.h",
   "src/compiler/translator/tree_util/ReplaceVariable.cpp",
   "src/compiler/translator/tree_util/ReplaceVariable.h",
+  "src/compiler/translator/tree_util/ReplaceClipDistanceVariable.cpp",
+  "src/compiler/translator/tree_util/ReplaceClipDistanceVariable.h",
   "src/compiler/translator/tree_util/ReplaceShadowingVariables.cpp",
   "src/compiler/translator/tree_util/ReplaceShadowingVariables.h",
   "src/compiler/translator/tree_util/RunAtTheEndOfShader.cpp",
