--- a/.travis.yml
+++ b/.travis.yml
@@ -29,9 +29,9 @@ jobs:
     python: "3.5"
     script:
       - mac/xcode/travis_build_mac.sh Release macosx ${TRAVIS_BUILD_DIR}/build_mac
-      - ios/xcode/travis_build_ios.sh Release appletvos ${TRAVIS_BUILD_DIR}/build_tvos
+      - ios/xcode/travis_build_tvos.sh Release appletvos ${TRAVIS_BUILD_DIR}/build_tvos
       - cd ${TRAVIS_BUILD_DIR}/build_mac/Build/Products/Release && zip --symlinks -r ${TRAVIS_BUILD_DIR}/MetalANGLE.framework.mac.zip MetalANGLE.framework
-      - cd ${TRAVIS_BUILD_DIR}/build_tvos/Build/Products/Release && zip --symlinks -r ${TRAVIS_BUILD_DIR}/MetalANGLE.framework.tvos.zip MetalANGLE.framework
+      - cd ${TRAVIS_BUILD_DIR}/build_tvos/Build/Products/Release-appletvos && zip --symlinks -r ${TRAVIS_BUILD_DIR}/MetalANGLE.framework.tvos.zip MetalANGLE.framework
     deploy:
       provider: releases
       api_key: ${GITHUB_TOKEN}
@@ -75,7 +75,7 @@ jobs:
     python: "3.5"
     script:
       - mac/xcode/travis_build_mac.sh Release
-      - ios/xcode/travis_build_ios.sh Release appletvos
+      - ios/xcode/travis_build_tvos.sh Release
     osx_image: xcode9.4
   - name: "macos gn xcode 9.4"
     python: "3.5"
