Cherry-pick from gles3-dev: WIP: Support importing external metal textures (2D, Cube) via KHR_image_base.
Change-Id: I525eb0a0160c67bbbc6baf8107429e08b2d67f6d

# Conflicts:
#	extensions/EGL_MGL_texture_client_buffer.txt
#	src/libANGLE/Caps.cpp
#	src/libANGLE/renderer/metal/DisplayMtl.h
#	src/libANGLE/renderer/metal/DisplayMtl.mm
#	src/tests/angle_end2end_tests.gni

--- a/src/libANGLE/renderer/metal/BUILD.gn
+++ b/src/libANGLE/renderer/metal/BUILD.gn
@@ -20,6 +20,8 @@ _metal_backend_sources = [
   "DisplayMtl.mm",
   "FrameBufferMtl.h",
   "FrameBufferMtl.mm",
+  "ImageMtl.h",
+  "ImageMtl.mm",
   "ProgramMtl.h",
   "ProgramMtl.mm",
   "QueryMtl.h",
