Disable vulkan on macOS by default.
It uses SwiftShader software renderer anw and
the build is not working.

Change-Id: Ida809941107f85a21c34cd4b720e076881e93559

--- a/gni/angle.gni
+++ b/gni/angle.gni
@@ -104,7 +104,7 @@ declare_args() {
       angle_has_build && ((is_win && !angle_is_winuwp) ||
                           (is_linux && angle_use_x11 && !is_chromeos) ||
                           (is_android && ndk_api_level_at_least_26) ||
-                          is_fuchsia || is_ggp || is_mac)
+                          is_fuchsia || is_ggp)
   angle_enable_null = true
   angle_enable_essl = true
   angle_enable_glsl = true
